Fix scrollbars (#187)

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -3,6 +3,7 @@ html,body {
 }
 body {
   background-color: #333;
+  overflow: hidden; /* Questionable: It's useful to have scratch space below you can scroll to. */
 }
 
 /* Flex grid items */
@@ -44,7 +45,7 @@ body {
   cursor: grabbing;
 }
 .scroll {
-  overflow: scroll;
+  overflow-y: auto;
 }
 .details {
   font-size: 80%;
